# sfdao

./: .flake8  .gitignore  .pre-commit-config.yaml  DATA_SETUP.md  IMPLEMENTATION_PLAN.md  LICENSE  PROJECT_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
prompt/: PLAN.md  SPEC.md
sfdao/: __init__.py
sfdao/evaluator/: __init__.py  financial_facts.py  privacy.py  privacy_cli.py  scoring.py  statistical.py
sfdao/ingestion/: __init__.py  financial_domain.py  loader.py  schema.py  type_detector.py
sfdao/reporter/: __init__.py  base.py
sfdao/scripts/: generate_test_synthetic_data.py
tests/e2e/: test_evaluator_integration_smoke.py  test_financial_facts_e2e.py  test_privacy_cli_smoke.py  test_privacy_e2e.py  test_privacy_ingestion_flow.py  test_scoring_pipeline_smoke.py  test_statistical_e2e.py
tests/fixtures/: creditcard_real_sample.csv  malformed_transactions.csv  sample_transactions.csv
tests/integration/ingestion/: test_loader_schema_pipeline.py
tests/unit/: test_generate_test_synthetic_data.py
tests/unit/evaluator/: test_financial_facts.py  test_privacy.py  test_scoring.py  test_statistical.py
tests/unit/ingestion/: test_financial_domain.py  test_loader.py  test_schema.py  test_type_detector.py
tests/unit/reporter/: test_base.py
